--- a/notes.org
+++ b/notes.org
@@ -81,6 +81,7 @@
           that it's used as a collective trademark.
         - This enumeration is a fool's errand. Better make the sql
           file directly.
+    - Continue from case file event statements section (Page 21).
 
 
 
