Added proper database definitions and code to insert header section into db.

--- a/notes.org
+++ b/notes.org
@@ -105,6 +105,10 @@
   :END:
   
 * [2009-10-28 Wed]
+  :CLOCK:
+  CLOCK: [2009-10-29 Thu 00:23]--[2009-10-29 Thu 01:36] =>  1:13
+  CLOCK: [2009-10-28 Wed 23:53]--[2009-10-29 Thu 00:09] =>  0:16
   CLOCK: [2009-10-28 Wed 12:59]--[2009-10-28 Wed 13:37] =>  0:38
+  :END:
   
   
