Successfully entered a complete file into the database and processed it. BUG [Primary key in madrid... table is not really unique across the file]

--- a/notes.org
+++ b/notes.org
@@ -111,7 +111,11 @@
   CLOCK: [2009-10-28 Wed 12:59]--[2009-10-28 Wed 13:37] =>  0:38
   :END:
   
-  
 * [2009-10-30 Fri]
-  CLOCK: [2009-10-30 Fri 00:52]--[2009-10-30 Fri 02:43] =>  1:51
+  :CLOCK:
+  CLOCK: [2009-10-30 Fri 00:52]--[2009-10-31 Sat 23:47] => 46:55
+  :END:
+
+* [2009-10-31 Sat]
+  CLOCK: [2009-10-31 Sat 23:47]--[2009-11-01 Sun 01:53] =>  2:06
   
